Resolve Sonar issues.